--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to My Website</h1>
     <p>This is the homepage of my awesome website.</p>
+    <p>Navigate to the <a href="about.html">About Page</a></p>
 </body>
 </html>
