--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Welcome to My Website</h1>
     <p>This is the homepage of my awesome website.</p>
     <p>Navigate to the <a href="about.html">About Page</a></p>
+    <p>paragraph</p>
 </body>
 </html>
